force-app/main/default/objects/ABHFL_Asset_Detail__c/ABHFL_Asset_Detail__c.object-meta.xml
<CustomObject>
    <label>ABHFL Asset Detail</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Asset Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABHFL Asset Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>