force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/AmmortApiStatus__c.field-meta.xml
<CustomField>
    <fullName>AmmortApiStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AmmortApiStatus</label>
    <type>Checkbox</type>
</CustomField>