force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <label>ARR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>