force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Asset_Details</relationshipName>
    <type>Lookup</type>
</CustomField>