force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Bounce__c.field-meta.xml
<CustomField>
    <fullName>Bounce__c</fullName>
    <label>Bounces 0, 1 in last 6 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>