force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Cycle_Date__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Date__c</fullName>
    <label>Cycle Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>