force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Fixed_Period__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Period__c</fullName>
    <label>Fixed Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>