force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMI</fullName>
            </value>
            <value>
                <fullName>Tenure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>