force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <label>Customer Current ROI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>