force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Is_NACH__c.field-meta.xml
<CustomField>
    <fullName>Is_NACH__c</fullName>
    <label>NACH Registered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>