force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Is_PDD__c.field-meta.xml
<CustomField>
    <fullName>Is_PDD__c</fullName>
    <label>PDD &lt; critical docs pending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>