force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Last_Repricing_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Repricing_Date__c</fullName>
    <label>Last Re-pricing &gt;= 6 months</label>
    <type>Date</type>
</CustomField>