force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Masked_Lan__c.field-meta.xml
<CustomField>
    <fullName>Masked_Lan__c</fullName>
    <formula>IF(
LEN( Asset__r.LAN__c ) &gt;= 4,
&quot;******&quot; &amp;
RIGHT(Asset__r.LAN__c, 4),
Asset__r.LAN__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Masked Lan</label>
    <type>Text</type>
</CustomField>