force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/MOB__c.field-meta.xml
<CustomField>
    <fullName>MOB__c</fullName>
    <label>MOB &gt;= 6 months</label>
    <type>Date</type>
</CustomField>