force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Offered_ROI__c.field-meta.xml
<CustomField>
    <fullName>Offered_ROI__c</fullName>
    <label>Offered ROI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>