force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Overdues__c.field-meta.xml
<CustomField>
    <fullName>Overdues__c</fullName>
    <label>Overdues</label>
    <length>255</length>
    <type>Text</type>
</CustomField>