force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Revised_EMI_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Revised_EMI_Tenure__c</fullName>
    <label>Revised EMI/Tenure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>