force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/Revised_ROI__c.field-meta.xml
<CustomField>
    <fullName>Revised_ROI__c</fullName>
    <label>Revised ROI</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>