force-app/main/default/objects/ABHFL_Asset_Detail__c/fields/VAN__c.field-meta.xml
<CustomField>
    <fullName>VAN__c</fullName>
    <label>VAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>